# voice-ai

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  SCRIPT.md  VOICE-AI.md  main.py  pyproject.toml
benchmarks/: Dockerfile.native  README.md  benchmark_latency.py  compare_mcp_native.py  docker-compose.mcp-benchmark.yml  final_mcp_benchmark.py  mcp_native_benchmark.py  run_benchmark.sh  simple_benchmark.py
benchmarks/llm_ttft/: README.md  compare_providers.py  groq_ttft.py  openai_ttft.py
benchmarks/openai_streaming/: main.py
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: app.html
data/: data_1.json  data_2.json  data_3.json  data_4.json  gold_standard_qa.json
docs/: ARCHITECTURE.md  CODE_GUIDE.md  JOURNEY.md  MCP_ANALYSIS.md  QUICKSTART.md  RESERVATION_AGENT_IMPLEMENTATION.md  audio-parameters-explained.md  chunk-size-hyperparameter.md  db_plan.md  lambda-voice-ai-analysis.md
infra/: docker-compose.yml
infra/docker/: docker-compose.yml
scripts/: simple_pipeline.py  start_api.py  test_agent_tools.py  test_llm.py  test_stt.py  test_tts.py
src/rag/: README.md  __init__.py  embeddings.py  hub_spoke.py  ingest.py  models.py  tools.py  vector_store.py
src/reservation/: api.py  db.py  mock_erp.py  models.py  seed.py  sync.py  tools.py
src/voice_ai/: __init__.py  audio_utils.py  config.py  main.py
tests/: __init__.py  test_async_deepgram.py  test_async_providers.py  test_deepgram_simple.py  test_deepgram_tts_simple.py  test_openai_simple.py  test_voice_pipeline.py  test_voice_pipeline_streaming.py
(+22 files in other folders)
