[project]
name = "voice-ai"
version = "0.1.0"
description = "Modular Voice AI system with pluggable providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.30.0",
    "deepgram-sdk>=5.3.1",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pydantic-settings>=2.12.0",
    "scipy>=1.17.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.40.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
